2008-05-31  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libproto/include/amd.h (struct _amd_message.has_new_msg): New
	field.
	* mailbox/amd.c (amd_append_message): Cache information about
	mailbox size in file .mu-size.
	(make_size_file_name, read_size_file, write_size_file): New
	functions.
	(amd_expunge, amd_sync): Update size cache file.
	(amd_get_size): Use size cache file if no mailbox_size method is
	provided. 
	* mailbox/mbx_default.c (mu_normalize_mailbox_url): Accept `='
	suffix for all mailbox types.
	* movemail/movemail.c (main): Call mu_mailbox_sync before closing
	destination mailbox.

2008-05-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* lib/Makefile.am (libmuaux_la_SOURCES): Add userprivs.c.
	* lib/userprivs.c: New file.
	* lib/muaux.h (mu_switch_to_privs): New prototype.

	* libproto/include/amd.h (_amd_data.msg_finish_delivery): Pass
	original message as the 3rd argument.
	* libproto/maildir/mbox.c (maildir_msg_finish_delivery): Take
	original message as the 3rd argument.
	Use message attributes to select the subdirectory to place it
	into.
	* mailbox/amd.c (amd_append_message): Pass original message as the
	3rd argument to msg_finish_delivery.

	* mailbox/filter_trans.c (SOFTBRK): Remove unused macro.

	* movemail/movemail.c: New option --copy-permissions (-P).

2008-04-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	Implement compilation of Sieve sources from the memory.
	
	* include/mailutils/libsieve.h (mu_sieve_compile_buffer): New
	function.
	* libsieve/sieve.h (sieve_lex_begin_string): New function.
	* libsieve/sieve.l: Remove support for AT&T lex.
	(sieve_lex_begin_string): New function.
	* libsieve/sieve.y (mu_sieve_compile_buffer): New
	function.

	* mailbox/header.c: Fix indentation.

2008-03-15  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libargp/tls.c (_tls_argp_parser): Take care not to pass NULL as
	the argument to the "tls" statement.

2008-03-07  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/comsat.c, imap4d/imap4d.c, imap4d/preauth.c,